Title Changed to Odyssey Homes

--- a/contact-page.html
+++ b/contact-page.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0" />
 
-    <title>Green Nature</title>
+    <title>Odyssey Homes</title>
 
 
     <link rel='stylesheet'
