--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="initial-scale=1.0" />
 
-    <title>Green Nature</title>
+    <title>Odyssey Homes</title>
 
 
     <link rel='stylesheet'
@@ -105,7 +105,8 @@
                             <ul id="menu-main-menu" class="dl-menu greennature-main-mobile-menu">
                                 <li
                                     class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item">
-                                    <a href="index.html" aria-current="page">Home</a></li>
+                                    <a href="index.html" aria-current="page">Home</a>
+                                </li>
                                 <li class="menu-item menu-item-has-children menu-item-15"><a href="#">Pages</a>
                                     <ul class="dl-submenu">
                                         <li class="menu-item"><a href="act-now.html">Act Now</a></li>
@@ -245,6 +246,12 @@
                             <ul id="menu-main-menu-1" class="sf-menu greennature-main-menu">
                                 <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
                                         href="index.html"><i class="fa fa-home"></i>Home</a></li>
+                                <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
+                                    href="#"><i class="fa fa-industry"></i>Projects</a>
+                                    <ul class="sub-menu">
+                                        <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri project</a></li>                                        
+                                    </ul>
+                                </li>
                                 <li class="menu-item menu-item-has-children greennature-normal-menu"><a href="#"
                                         class="sf-with-ul-pre"><i class="fa fa-file-text-o"></i>Pages</a>
                                     <ul class="sub-menu">
@@ -628,7 +635,8 @@
                                             <h3
                                                 class="greennature-item-title greennature-skin-title greennature-skin-border">
                                                 <img src="upload/icon-5.png" alt="" width="80" height="80" />Our Recent
-                                                Projects</h3><a class="greennature-item-title-link" href="#">More
+                                                Projects
+                                            </h3><a class="greennature-item-title-link" href="#">More
                                                 Projects</a>
                                             <div class="clear"></div>
                                         </div>
@@ -903,7 +911,8 @@
                                                                             class="blog-info blog-author greennature-skin-info">
                                                                             <i class="fa fa-pencil"></i><a href="#"
                                                                                 title="Posts by John Maxwell"
-                                                                                rel="author">John Maxwell</a></div>
+                                                                                rel="author">John Maxwell</a>
+                                                                        </div>
                                                                         <div class="clear"></div>
                                                                     </div>
                                                                     <div class="clear"></div>
@@ -949,7 +958,8 @@
                                                                             class="blog-info blog-author greennature-skin-info">
                                                                             <i class="fa fa-pencil"></i><a href="#"
                                                                                 title="Posts by John Maxwell"
-                                                                                rel="author">John Maxwell</a></div>
+                                                                                rel="author">John Maxwell</a>
+                                                                        </div>
                                                                         <div class="clear"></div>
                                                                     </div>
                                                                     <div class="clear"></div>
@@ -995,7 +1005,8 @@
                                                                             class="blog-info blog-author greennature-skin-info">
                                                                             <i class="fa fa-pencil"></i><a href="#"
                                                                                 title="Posts by John Maxwell"
-                                                                                rel="author">John Maxwell</a></div>
+                                                                                rel="author">John Maxwell</a>
+                                                                        </div>
                                                                         <div class="clear"></div>
                                                                     </div>
                                                                     <div class="clear"></div>
@@ -1069,7 +1080,8 @@
                                                                     <div
                                                                         class="testimonial-author-image greennature-skin-border">
                                                                         <img src="upload/testimonial-3-150x150.jpg"
-                                                                            alt="" width="150" height="150" /></div>
+                                                                            alt="" width="150" height="150" />
+                                                                    </div>
                                                                     <span
                                                                         class="testimonial-author greennature-skin-link-color">Sarah
                                                                         Kof<span>, </span></span><span
@@ -1090,7 +1102,8 @@
                                                                     <div
                                                                         class="testimonial-author-image greennature-skin-border">
                                                                         <img src="upload/testimonial-1-150x150.jpg"
-                                                                            alt="" width="150" height="150" /></div>
+                                                                            alt="" width="150" height="150" />
+                                                                    </div>
                                                                     <span
                                                                         class="testimonial-author greennature-skin-link-color">Jane
                                                                         Doe<span>, </span></span><span
@@ -1111,7 +1124,8 @@
                                                                     <div
                                                                         class="testimonial-author-image greennature-skin-border">
                                                                         <img src="upload/testimonial-2-150x150.jpg"
-                                                                            alt="" width="150" height="150" /></div>
+                                                                            alt="" width="150" height="150" />
+                                                                    </div>
                                                                     <span
                                                                         class="testimonial-author greennature-skin-link-color">John
                                                                         Smith<span>, </span></span><span
@@ -1228,7 +1242,8 @@
                                         <div
                                             class="greennature-item-title-nav greennature-nav-container  greennature-center greennature-large">
                                             <i class="icon-angle-left greennature-flex-prev"></i><i
-                                                class="icon-angle-right greennature-flex-next"></i></div>
+                                                class="icon-angle-right greennature-flex-next"></i>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="one-fifth column"></div>
