--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                 <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
                                     href="#"><i class="fa fa-industry"></i>Projects</a>
                                     <ul class="sub-menu">
-                                        <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri project</a></li>                                        
+                                        <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri Project</a></li>                                        
                                     </ul>
                                 </li>
                                 <li class="menu-item menu-item-has-children greennature-normal-menu"><a href="#"
