--- a/index.html
+++ b/index.html
@@ -82,12 +82,36 @@
                 <div class="greennature-header-container container">
                     <div class="greennature-header-inner-overlay"></div>
                     <!-- logo -->
+
                     <div class="greennature-logo">
                         <div class="greennature-logo-inner">
-                            <a>
-                                <img src="images/some_other_logo-removebg-preview3.png" alt="" /> </a>
+                            <a href="index.html">
+                                <img src="images/logo.png" alt="" /> </a>
+                        </div>
+                        <div class="greennature-responsive-navigation dl-menuwrapper"
+                            id="greennature-responsive-navigation">
+                            <button class="dl-trigger">Open Menu</button>
+                            <ul id="menu-main-menu" class="dl-menu greennature-main-mobile-menu">
+                                <li
+                                    class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item">
+                                    <a href="index.html" aria-current="page">Home</a>
+                                </li>
+                                <li class="menu-item menu-item-has-children menu-item-15"><a href="#">Projects</a>
+                                    <ul class="dl-submenu">
+                                        <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri
+                                                Project</a></li>
+                                    </ul>
+                                </li>
+                                <li class="menu-item menu-item-has-children"><a href="about-2.html">About Us</a>
+                                </li>
+                                <li class="menu-item menu-item-has-children"><a href="contact-page.html">Contact
+                                        Us</a>
+                                </li>
+
+                            </ul>
                         </div>
                     </div>
+
 
                     <!-- navigation -->
                     <div class="greennature-navigation-wrapper">
@@ -143,8 +167,7 @@
                                     <div id="slider_1" class="master-slider ms-skin-default">
 
                                         <div class="ms-slide" data-delay="7" data-fill-mode="fill">
-                                            <img src="upload/House_with_scenary.jpg"
-                                                alt="First Image" title="" />
+                                            <img src="upload/House_with_scenary.jpg" alt="First Image" title="" />
 
                                             <div class="ms-layer  msp-cn-1-3" style=""
                                                 data-effect="t(true,150,n,n,n,n,n,n,n,n,n,n,n,n,n)" data-duration="437"
@@ -166,8 +189,7 @@
 
                                         </div>
                                         <div class="ms-slide" data-delay="7" data-fill-mode="fill">
-                                            <img src="upload/House_with_scenary.jpg"
-                                                alt="" title="" />
+                                            <img src="upload/House_with_scenary.jpg" alt="" title="" />
 
                                             <div class="ms-layer  msp-cn-1-9" style=""
                                                 data-effect="t(true,150,n,n,n,n,n,n,n,n,n,n,n,n,n)" data-duration="437"
@@ -189,8 +211,7 @@
 
                                         </div>
                                         <div class="ms-slide" data-delay="7" data-fill-mode="fill">
-                                            <img src="upload/House_with_scenary.jpg"
-                                                alt="" title="" />
+                                            <img src="upload/House_with_scenary.jpg" alt="" title="" />
 
                                             <div class="ms-layer  msp-cn-1-10" style=""
                                                 data-effect="t(true,n,n,-500,n,n,n,n,n,n,n,n,n,n,n)" data-duration="425"
