Added logo + about us, contact us page modified

--- a/index.html
+++ b/index.html
@@ -56,16 +56,20 @@
                     <div class="top-navigation-right">
                         <div class="top-social-wrapper">
                             <div class="social-icon">
-                                <a href="#" target="_blank">
+                                <a href="https://www.facebook.com/profile.php?id=100069502607765" target="_blank">
                                     <i class="fa fa-facebook"></i></a>
                             </div>
                             <div class="social-icon">
-                                <a href="#" target="_blank">
-                                    <i class="fa fa-linkedin"></i></a>
+                                <a href="https://x.com/DeepeshNav42902" target="_blank">
+                                    <i class="fa fa-twitter"></i></a>
                             </div>
                             <div class="social-icon">
-                                <a href="#" target="_blank">
-                                    <i class="fa fa-twitter"></i></a>
+                                <a href="https://www.instagram.com/deepeshnavani123/?next=%2F" target="_blank">
+                                    <i class="fa fa-instagram"></i></a>
+                            </div>
+                            <div class="social-icon">
+                                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
+                                    <i class="fa fa-envelope"></i></a>
                             </div>
                             <div class="social-icon">
                                 <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank">
@@ -85,8 +89,8 @@
 
                     <div class="greennature-logo">
                         <div class="greennature-logo-inner">
-                            <a href="index.html">
-                                <img src="images/logo.png" alt="" /> </a>
+                            <a>
+                                <img src="images/Logo-removebg2.png" alt="" /> </a>
                         </div>
                         <div class="greennature-responsive-navigation dl-menuwrapper"
                             id="greennature-responsive-navigation">
@@ -422,8 +426,9 @@
                 <div class="footer-column three columns" id="footer-widget-1">
                     <div id="text-5" class="widget widget_text greennature-item greennature-widget">
                         <div class="textwidget">
-                            <p><img src="upload/logo-light.png" style="width: 170px;" alt="" /></p>
-                            <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                            <p><img src="images/Logo-removebg2.png" style="" alt="" /></p>
+                            <p style="margin-top: -35px;">Cum sociis natoque penatibus et magnis dis parturient montes,
+                                nascetur ridiculus mus.
                                 Morbi leo risus, porta. Etiam porta sem malesuada magna mollis euismod.</p>
                         </div>
                     </div>
@@ -464,17 +469,20 @@
             <div class="copyright-wrapper">
                 <div class="copyright-container container">
                     <div class="copyright-left">
-                        <a href="http://facebook.com/goodlayers"><i class="greennature-icon fa fa-facebook"
-                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a> <a
-                            href="http://twitter.com/goodlayers"><i class="greennature-icon fa fa-twitter"
-                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a> <a href="#"><i
-                                class="greennature-icon fa fa-dribbble"
-                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a> <a href="#"><i
-                                class="greennature-icon fa fa-pinterest"
-                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a> <a href="#"><i
-                                class="greennature-icon fa fa-google-plus"
-                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a> <a href="#"><i
+                        <a href="https://www.facebook.com/profile.php?id=100069502607765" target="_blank"><i
+                                class="greennature-icon fa fa-facebook"
+                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
+                        <a href="https://x.com/DeepeshNav42902" target="_blank"><i
+                                class="greennature-icon fa fa-twitter"
+                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
+                        <a href="https://www.instagram.com/deepeshnavani123/?next=%2F" target="_blank"><i
                                 class="greennature-icon fa fa-instagram"
+                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
+                        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i
+                                class="greennature-icon fa fa-envelope"
+                                style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
+                        <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank"><i
+                                class="greennature-icon fa fa-whatsapp"
                                 style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
                     </div>
                     <div class="copyright-right">
