--- a/contact-page.html
+++ b/contact-page.html
@@ -68,8 +68,8 @@
                                     <i class="fa fa-instagram"></i></a>
                             </div>
                             <div class="social-icon">
-                                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
-                                    <i class="fa fa-envelope"></i></a>
+                                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deepeshnavani@gmail.com"
+                                    target="_blank" target="_blank"> <i class="fa fa-envelope"></i></a>
                             </div>
                             <div class="social-icon">
                                 <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank">
@@ -96,8 +96,7 @@
                             id="greennature-responsive-navigation">
                             <button class="dl-trigger">Open Menu</button>
                             <ul id="menu-main-menu" class="dl-menu greennature-main-mobile-menu">
-                                <li
-                                    class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item">
+                                <li class="menu-item menu-item-home  page_item page-item-5680 ">
                                     <a href="index.html" aria-current="page">Home</a>
                                 </li>
                                 <li class="menu-item menu-item-has-children menu-item-15"><a href="#">Projects</a>
@@ -108,7 +107,8 @@
                                 </li>
                                 <li class="menu-item menu-item-has-children"><a href="about-2.html">About Us</a>
                                 </li>
-                                <li class="menu-item menu-item-has-children"><a href="contact-page.html">Contact
+                                <li class="menu-item current-menu-item current_page_item menu-item-has-children"><a
+                                        href="contact-page.html">Contact
                                         Us</a>
                                 </li>
 
@@ -121,10 +121,10 @@
                     <div class="greennature-navigation-wrapper">
                         <nav class="greennature-navigation" id="greennature-main-navigation">
                             <ul id="menu-main-menu-1" class="sf-menu greennature-main-menu">
-                                <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
-                                        href="index.html"><i class="fa fa-home"></i>Home</a></li>
-                                <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
-                                        href="#"><i class="fa fa-industry"></i>Projects</a>
+                                <li class="menu-item menu-item-home greennature-normal-menu"><a href="index.html"><i
+                                            class="fa fa-home"></i>Home</a></li>
+                                <li class="menu-item menu-item-home greennature-normal-menu"><a href="#"><i
+                                            class="fa fa-industry"></i>Projects</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri
                                                 Project</a></li>
@@ -132,10 +132,10 @@
                                 </li>
                                 <li class="menu-item menu-item-has-children greennature-normal-menu"><a
                                         href="about-2.html" class="sf-with-ul-pre"><i
-                                            class="fa fa-file-text-o"></i>About</a>
+                                            class="fa fa-file-text-o"></i>About Us</a>
                                 </li>
                                 <li
-                                    class="menu-item menu-item-has-childrenmenu-item menu-item-has-children greennature-mega-menu">
+                                    class="menu-item menu-item-has-childrenmenu-item current_page_item menu-item-has-children greennature-mega-menu">
                                     <a href="contact-page.html" class="sf-with-ul-pre"><i
                                             class="fa fa-globe"></i>Contact Us</a>
                                 </li>
@@ -162,7 +162,9 @@
                             style="padding-top: 91px; padding-bottom: 0px;  background-color: #ffffff; ">
                             <div class="greennature-item greennature-content-item" style="margin-bottom: 0px;">
                                 <iframe style="width:100%; height:480px; border:0"
-                                    src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d19905.696399556287!2d-0.3007084089960577!3d51.417531259591925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s2334+Peterson+Street+Kingston+UK+London+H14D!5e0!3m2!1sen!2s!4v1546697086219"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30052.66132706135!2d73.54785737338565!3d19.68780242537225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdd8429ffe9bcbb%3A0x264735325a20fa4d!2sIgatpuri%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1722595357658!5m2!1sen!2sin"
+                                    style="border:0;width:100%;height: 480px;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade">
                                     width="600" height="450"></iframe>
                                 <div
                                     style="position: absolute;width: 80%;bottom: 20px;left: 0;right: 0;margin-left: auto;margin-right: auto;color: #000;">
@@ -276,19 +278,20 @@
                                 <div id="text-8" class="widget widget_text greennature-item greennature-widget">
                                     <h3 class="greennature-widget-title">Social Media</h3>
                                     <div class="clear"></div>
-                                    <div class="textwidget"><a href="http://facebook.com/goodlayers"><i
-                                                class="greennature-icon fa fa-facebook"
+                                    <div class="textwidget">
+                                        <a href="https://www.facebook.com/profile.php?id=100069502607765"
+                                            target="_blank">
+                                            <i class="greennature-icon fa fa-facebook"
                                                 style="vertical-align: middle; color: #444444; font-size: 28px; "></i></a>
-                                        <a href="http://twitter.com/goodlayers"><i
-                                                class="greennature-icon fa fa-twitter"
+                                        <a href="https://x.com/DeepeshNav42902" target="_blank">
+                                            <i class="greennature-icon fa fa-twitter"
                                                 style="vertical-align: middle; color: #444444; font-size: 28px; "></i></a>
-                                        <a href="#"><i class="greennature-icon fa fa-dribbble"
+                                        <a href="https://www.instagram.com/deepeshnavani123/?next=%2F" target="_blank">
+                                            <i class="greennature-icon fa fa-instagram"
                                                 style="vertical-align: middle; color: #444444; font-size: 28px; "></i></a>
-                                        <a href="#"><i class="greennature-icon fa fa-pinterest"
-                                                style="vertical-align: middle; color: #444444; font-size: 28px; "></i></a>
-                                        <a href="#"><i class="greennature-icon fa fa-google-plus"
-                                                style="vertical-align: middle; color: #444444; font-size: 28px; "></i></a>
-                                        <a href="#"><i class="greennature-icon fa fa-instagram"
+                                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deepeshnavani@gmail.com"
+                                            target="_blank">
+                                            <i class="greennature-icon fa fa-envelope"
                                                 style="vertical-align: middle; color: #444444; font-size: 28px; "></i></a>
                                         <a href="#" id="whatsappLink" target="_blank" onclick="sendWhatsappMessage()">
                                             <i class="greennature-icon fa fa-whatsapp"
@@ -306,7 +309,7 @@
                     <section id="content-section-3">
                         <div class="greennature-parallax-wrapper greennature-background-image gdlr-show-all no-skin"
                             id="greennature-parallax-wrapper-1" data-bgspeed="0.2"
-                            style="background-image: url('upload/service-bg.jpg'); padding-top: 100px; padding-bottom: 50px; ">
+                            style="background-color: #fff; padding-top: 100px; padding-bottom: 50px; ">
                             <div class="container">
                                 <div class="four columns">
                                     <div class="greennature-box-with-icon-ux greennature-ux">
@@ -319,8 +322,8 @@
                                             <h4 class="box-with-icon-title">Contact By Email</h4>
                                             <div class="clear"></div>
                                             <div class="box-with-icon-caption">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod
-                                                    tempor incidunt ut labore et dolore magna aliqua.</p>
+                                                <p>fakeemail1@gmail.com</p>
+                                                <p>fakeemail2@gmail.com</p>
                                             </div>
                                         </div>
                                     </div>
@@ -336,8 +339,8 @@
                                             <h4 class="box-with-icon-title">Contact By Phone</h4>
                                             <div class="clear"></div>
                                             <div class="box-with-icon-caption">
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod
-                                                    tempor incidunt ut labore et dolore magna aliqua.</p>
+                                                <p>1234567890</p>
+                                                <p>1234567890</p>
                                             </div>
                                         </div>
                                     </div>
@@ -379,8 +382,8 @@
                 <div class="footer-column three columns" id="footer-widget-1">
                     <div id="text-5" class="widget widget_text greennature-item greennature-widget">
                         <div class="textwidget">
-                            <p><img src="images/Logo-removebg2.png" style="margin-top:-20px; width: 120px;" alt="" /></p>
-                            <p style="margin-top: -35px;">Cum sociis natoque penatibus et magnis dis parturient montes,
+                            <p><img src="images/Logo-removebg2.png" style="width: 150px; " alt="" /></p>
+                            <p style="">Cum sociis natoque penatibus et magnis dis parturient montes,
                                 nascetur ridiculus mus.
                                 Morbi leo risus, porta. Etiam porta sem malesuada magna mollis euismod.</p>
                         </div>
@@ -431,8 +434,8 @@
                         <a href="https://www.instagram.com/deepeshnavani123/?next=%2F" target="_blank"><i
                                 class="greennature-icon fa fa-instagram"
                                 style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
-                        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i
-                                class="greennature-icon fa fa-envelope"
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deepeshnavani@gmail.com"
+                            target="_blank"><i class="greennature-icon fa fa-envelope"
                                 style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
                         <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank"><i
                                 class="greennature-icon fa fa-whatsapp"
