--- a/igatpuri-project-detail.html
+++ b/igatpuri-project-detail.html
@@ -96,8 +96,8 @@
                                     <i class="fa fa-instagram"></i></a>
                             </div>
                             <div class="social-icon">
-                                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
-                                    <i class="fa fa-envelope"></i></a>
+                                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deepeshnavani@gmail.com"
+                                    target="_blank" target="_blank"> <i class="fa fa-envelope"></i></a>
                             </div>
                             <div class="social-icon">
                                 <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank">
@@ -124,11 +124,12 @@
                             id="greennature-responsive-navigation">
                             <button class="dl-trigger">Open Menu</button>
                             <ul id="menu-main-menu" class="dl-menu greennature-main-mobile-menu">
-                                <li
-                                    class="menu-item menu-item-home current-menu-item page_item page-item-5680 current_page_item">
+                                <li class="menu-item menu-item-home page_item page-item-5680 ">
                                     <a href="index.html" aria-current="page">Home</a>
                                 </li>
-                                <li class="menu-item menu-item-has-children menu-item-15"><a href="#">Projects</a>
+                                <li
+                                    class="menu-item current-menu-item current_page_item menu-item-has-children menu-item-15">
+                                    <a href="#">Projects</a>
                                     <ul class="dl-submenu">
                                         <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri
                                                 Project</a></li>
@@ -151,7 +152,7 @@
                             <ul id="menu-main-menu-1" class="sf-menu greennature-main-menu">
                                 <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
                                         href="index.html"><i class="fa fa-home"></i>Home</a></li>
-                                <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
+                                <li class="menu-item current-menu-item menu-item-home greennature-normal-menu"><a
                                         href="#"><i class="fa fa-industry"></i>Projects</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri
@@ -160,7 +161,7 @@
                                 </li>
                                 <li class="menu-item menu-item-has-children greennature-normal-menu"><a
                                         href="about-2.html" class="sf-with-ul-pre"><i
-                                            class="fa fa-file-text-o"></i>About</a>
+                                            class="fa fa-file-text-o"></i>About Us</a>
                                 </li>
                                 <li
                                     class="menu-item menu-item-has-childrenmenu-item menu-item-has-children greennature-mega-menu">
@@ -293,9 +294,7 @@
                             <div class="container">
                                 <div class="six columns">
                                     <div class="greennature-video-item greennature-item">
-                                        <iframe
-                                            src="http://player.vimeo.com/video/101707505?title=0&amp;byline=0&amp;portrait=0"
-                                            width="620" height="348"></iframe>
+                                        <video controls src="upload/sample.mp4" width="620" height="348"></video>
                                     </div>
                                 </div>
                                 <div class="six columns">
@@ -326,9 +325,8 @@
                                             <pre>3 Estates  |  6 Villas  |  1 vadoo</pre>
                                         </div>
 
-                                        <a class="about-us-read-more greennature-button"
-                                            href="C:\Odyssey\Project\OdysseyHomes\docs\1.pdf"
-                                            onclick="downloadPDF()">Download Brochure</a>
+                                        <a class="about-us-read-more greennature-button" target="_blank" href="docs/1.pdf">
+                                            Download Brochure</a>
                                     </div>
                                 </div>
                                 <div class="clear"></div>
@@ -490,8 +488,8 @@
                 <div class="footer-column three columns" id="footer-widget-1">
                     <div id="text-5" class="widget widget_text greennature-item greennature-widget">
                         <div class="textwidget">
-                            <p><img src="images/Logo-removebg2.png" style=" margin-top:-20px; width: 120px;" alt="" /></p>
-                            <p style="margin-top: -35px;">Cum sociis natoque penatibus et magnis dis parturient montes,
+                            <p><img src="images/Logo-removebg2.png" style="width: 150px; " alt="" /></p>
+                            <p style="">Cum sociis natoque penatibus et magnis dis parturient montes,
                                 nascetur ridiculus mus.
                                 Morbi leo risus, porta. Etiam porta sem malesuada magna mollis euismod.</p>
                         </div>
@@ -542,8 +540,8 @@
                         <a href="https://www.instagram.com/deepeshnavani123/?next=%2F" target="_blank"><i
                                 class="greennature-icon fa fa-instagram"
                                 style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
-                        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i
-                                class="greennature-icon fa fa-envelope"
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deepeshnavani@gmail.com"
+                            target="_blank"><i class="greennature-icon fa fa-envelope"
                                 style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
                         <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank"><i
                                 class="greennature-icon fa fa-whatsapp"
