--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                                     <i class="fa fa-instagram"></i></a>
                             </div>
                             <div class="social-icon">
-                                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
-                                    <i class="fa fa-envelope"></i></a>
+                                <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deepeshnavani@gmail.com"
+                                    target="_blank" target="_blank"> <i class="fa fa-envelope"></i></a>
                             </div>
                             <div class="social-icon">
                                 <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank">
@@ -123,8 +123,8 @@
                             <ul id="menu-main-menu-1" class="sf-menu greennature-main-menu">
                                 <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
                                         href="index.html"><i class="fa fa-home"></i>Home</a></li>
-                                <li class="menu-item menu-item-home current-menu-item greennature-normal-menu"><a
-                                        href="#"><i class="fa fa-industry"></i>Projects</a>
+                                <li class="menu-item menu-item-home greennature-normal-menu"><a href="#"><i
+                                            class="fa fa-industry"></i>Projects</a>
                                     <ul class="sub-menu">
                                         <li class="menu-item"><a href="igatpuri-project-detail.html">Igatpuri
                                                 Project</a></li>
@@ -132,7 +132,7 @@
                                 </li>
                                 <li class="menu-item menu-item-has-children greennature-normal-menu"><a
                                         href="about-2.html" class="sf-with-ul-pre"><i
-                                            class="fa fa-file-text-o"></i>About</a>
+                                            class="fa fa-file-text-o"></i>About Us</a>
                                 </li>
                                 <li
                                     class="menu-item menu-item-has-childrenmenu-item menu-item-has-children greennature-mega-menu">
@@ -262,9 +262,7 @@
                                     </div>
                                 </div>
                                 <div class="greennature-video-item greennature-item">
-                                    <iframe
-                                        src="http://player.vimeo.com/video/101707505?title=0&amp;byline=0&amp;portrait=0"
-                                        width="620" height="348"></iframe>
+                                    <video controls src="upload/sample.mp4"></video>
                                 </div>
                             </div>
                         </div>
@@ -277,7 +275,7 @@
                                 <div class="six columns">
                                     <div class="greennature-item greennature-icon-with-list-item">
                                         <div class="list-with-icon-ux greennature-ux">
-                                            <div class="list-with-icon greennature-left">
+                                            <div class="list-with-icon greennature-left ">
                                                 <div class="list-with-icon-image"
                                                     style="width: 70px; height: 70px; overflow: hidden; border-radius: 10px;">
                                                     <img src="images/swimming-pool.png" class="sixImages" />
@@ -291,7 +289,7 @@
                                             </div>
                                         </div>
                                         <div class="list-with-icon-ux greennature-ux">
-                                            <div class="list-with-icon greennature-left">
+                                            <div class="list-with-icon greennature-left ">
                                                 <div class="list-with-icon-image"
                                                     style="width: 70px; height: 70px; overflow: hidden; border-radius: 10px;">
                                                     <img class="sixImages" src="images/garden.png" />
@@ -305,7 +303,7 @@
                                             </div>
                                         </div>
                                         <div class="list-with-icon-ux greennature-ux">
-                                            <div class="list-with-icon greennature-left">
+                                            <div class="list-with-icon greennature-left ">
                                                 <div class="list-with-icon-image"
                                                     style="width: 70px; height: 70px; overflow: hidden; border-radius: 10px;">
                                                     <img src="images/checklist.png" class="sixImages" />
@@ -324,7 +322,7 @@
                                 <div class="six columns">
                                     <div class="greennature-item greennature-icon-with-list-item">
                                         <div class="list-with-icon-ux greennature-ux">
-                                            <div class="list-with-icon greennature-left">
+                                            <div class="list-with-icon greennature-left ">
                                                 <div class="list-with-icon-image"
                                                     style="width: 70px; height: 70px; overflow: hidden; border-radius: 10px;">
                                                     <img src="images/security.png" class="sixImages" />
@@ -338,7 +336,7 @@
                                             </div>
                                         </div>
                                         <div class="list-with-icon-ux greennature-ux">
-                                            <div class="list-with-icon greennature-left">
+                                            <div class="list-with-icon greennature-left ">
                                                 <div class="list-with-icon-image"
                                                     style="width: 70px; height: 70px; overflow: hidden; border-radius: 10px;">
                                                     <img src="images/expressway.png" class="sixImages" />
@@ -352,7 +350,7 @@
                                             </div>
                                         </div>
                                         <div class="list-with-icon-ux greennature-ux">
-                                            <div class="list-with-icon greennature-left">
+                                            <div class="list-with-icon greennature-left  ">
                                                 <div class="list-with-icon-image"
                                                     style="width: 70px; height: 70px; overflow: hidden; border-radius: 10px;">
                                                     <img src="images/restaurant1.webp" class="sixImages" />
@@ -379,9 +377,7 @@
                             <div class="container">
                                 <div class="six columns">
                                     <div class="greennature-video-item greennature-item">
-                                        <iframe
-                                            src="http://player.vimeo.com/video/101707505?title=0&amp;byline=0&amp;portrait=0"
-                                            width="620" height="348"></iframe>
+                                        <video controls src="upload/sample.mp4" width="620" height="348"></video>
                                     </div>
                                 </div>
                                 <div class="six columns">
@@ -426,8 +422,8 @@
                 <div class="footer-column three columns" id="footer-widget-1">
                     <div id="text-5" class="widget widget_text greennature-item greennature-widget">
                         <div class="textwidget">
-                            <p><img src="images/Logo-removebg2.png" style="" alt="" /></p>
-                            <p style="margin-top: -35px;">Cum sociis natoque penatibus et magnis dis parturient montes,
+                            <p><img src="images/Logo-removebg2.png" style="width: 150px; " alt="" /></p>
+                            <p style="">Cum sociis natoque penatibus et magnis dis parturient montes,
                                 nascetur ridiculus mus.
                                 Morbi leo risus, porta. Etiam porta sem malesuada magna mollis euismod.</p>
                         </div>
@@ -478,8 +474,8 @@
                         <a href="https://www.instagram.com/deepeshnavani123/?next=%2F" target="_blank"><i
                                 class="greennature-icon fa fa-instagram"
                                 style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
-                        <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i
-                                class="greennature-icon fa fa-envelope"
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=deepeshnavani@gmail.com"
+                            target="_blank"><i class="greennature-icon fa fa-envelope"
                                 style="vertical-align: middle;color: #bbbbbb;font-size: 20px"></i></a>
                         <a href="https://wa.me/+918975067444/?text=Hello%20I\'m%20Girisha" target="_blank"><i
                                 class="greennature-icon fa fa-whatsapp"
